# codex-token-usage

./: .gitignore  README.md  【一键打包】build-portable.cmd
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/scripts/: One-Click-Package.ps1  Package-Portable.ps1  Sync-Version.ps1  Verify-Release.ps1
app/src/: App.svelte  app.css  main.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs
skills/codex-token-usage-skill/: SKILL.md
skills/codex-token-usage-skill/agents/: openai.yaml
skills/codex-token-usage-skill/scripts/: download-codex-token-usage.ps1
