[package]
name = "codex-token-usage"
version = "1.0.6"
description = "Local Codex token usage dashboard"
authors = ["Codex Token Usage"]
edition = "2021"

[lib]
name = "codex_token_usage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.41", features = ["serialize"] }
tauri = { version = "2.11.5", features = ["tray-icon", "image-png"] }
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
